--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,11 +1,24 @@
+# to use enum as string with implementing to string functions
+include(FetchContent)
+
+FetchContent_Declare(
+  magic_enum
+  GIT_REPOSITORY https://github.com/Neargye/magic_enum.git
+  GIT_TAG v0.9.6
+)
+
+FetchContent_MakeAvailable(magic_enum)
+
 # Utils module
 add_library(cc_utils
     utils/Result.hpp utils/Result.cpp
     utils/HttpClient.hpp utils/HttpClient.cpp
     utils/Json_utils.hpp utils/Json_utils.cpp
+    utils/common_functions.cpp utils/common_functions.hpp 
 )
 target_include_directories(cc_utils PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
+#target_link_libraries(cc_utils PUBLIC magic_enum::magic_enum)
 # Models module
 add_library(cc_models
     models/food.hpp models/food.cpp
@@ -15,6 +28,8 @@ add_library(cc_models
     models/DTOs.hpp
 )
 target_include_directories(cc_models PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+target_link_libraries(cc_models PUBLIC magic_enum::magic_enum)
+target_link_libraries(cc_utils PUBLIC cc_models)
 # Clients module
 add_library(cc_clients
     clients/OpenFoodFactsClient.cpp clients/OpenFoodFactsClient.hpp
@@ -26,7 +41,7 @@ find_package(CURL REQUIRED)
 target_link_libraries(cc_clients PRIVATE ${CURL_LIBRARIES})
 
 target_include_directories(cc_clients PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(cc_clients PRIVATE cc_utils)
+target_link_libraries(cc_clients PUBLIC cc_utils)
 
 # Storage module
 add_library(cc_storage
@@ -48,11 +63,11 @@ target_include_directories(cc_services PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_link_libraries(cc_services PUBLIC cc_storage cc_clients cc_models cc_utils)
 
 # API module
-add_library(cc_api
-    api/Server.cpp api/Server.hpp
-)
-target_include_directories(cc_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
-target_link_libraries(cc_api PUBLIC cc_services cc_utils)
+#add_library(cc_api
+#    api/Server.cpp api/Server.hpp
+#)
+#target_include_directories(cc_api PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
+#target_link_libraries(cc_api PUBLIC cc_services cc_utils)
 #######################
 
 
@@ -71,9 +86,8 @@ FetchContent_MakeAvailable(crow)
 find_package(Threads REQUIRED)
 
 # Main executable
-add_executable(cc_app main.cpp)
+#add_executable(cc_app main.cpp)
 #target_link_libraries(cc_app PRIVATE cc_api ${CURL_LIBRARIES})
-target_link_libraries(cc_app PRIVATE Crow::Crow)
-target_link_libraries(cc_app PRIVATE cc_api)
-target_link_libraries(cc_app PRIVATE Threads::Threads)
-#target_link_libraries(cc_app PRIVATE cc_models)
+#target_link_libraries(cc_app PRIVATE Crow::Crow)
+#target_link_libraries(cc_app PRIVATE cc_api)
+#target_link_libraries(cc_app PRIVATE Threads::Threads)
