--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,3 +64,27 @@ if(CLANG_FORMAT_EXE)
     COMMENT "Running clang-format"
   )
 endif()
+
+
+# ---- clang-tidy (applies during build) ----
+#option(ENABLE_CLANG_TIDY "Enable clang-tidy analysis" ON)
+#if(ENABLE_CLANG_TIDY)
+#  find_program(CLANG_TIDY_EXE NAMES clang-tidy)
+#  if(CLANG_TIDY_EXE)
+#    set(CMAKE_CXX_CLANG_TIDY
+#      ${CLANG_TIDY_EXE};
+#      -p=${CMAKE_BINARY_DIR}
+#    )
+#  endif()
+#endif()
+# ---- clang-tidy (applies during build) ----
+#option(ENABLE_CLANG_TIDY "Enable clang-tidy analysis" OFF)
+#if(ENABLE_CLANG_TIDY)
+#  find_program(CLANG_TIDY_EXE NAMES clang-tidy)
+#  if(CLANG_TIDY_EXE)
+#    set(CMAKE_CXX_CLANG_TIDY
+#      ${CLANG_TIDY_EXE};
+#      -p=${CMAKE_BINARY_DIR}
+#    )
+#  endif()
+#endif()
