--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,13 +36,13 @@ jobs:
         #   files=$(find src tests -name '*.cpp' -o -name '*.hpp' -o -name '*.h')
         #   clang-format --dry-run --Werror $files
 
-      - name: Run tests
-        run: ctest --test-dir build --output-on-failure
+      #- name: Run tests
+      #  run: ctest --test-dir build --output-on-failure
 
-      - name: Generate coverage (HTML)
-        run: |
-          mkdir -p build/report
-          gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
+      #- name: Generate coverage (HTML)
+      #  run: |
+      #    mkdir -p build/report
+      #    gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
