--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,10 +39,10 @@ jobs:
       #- name: Run tests
       #  run: ctest --test-dir build --output-on-failure
 
-      #- name: Generate coverage (HTML)
-      #  run: |
-      #    mkdir -p build/report
-      #    gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
+      - name: Generate coverage (HTML)
+        run: |
+          mkdir -p build/report
+          gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
 
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
