--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,11 +20,6 @@ jobs:
             clang-format \
             gcovr
 
-      - name: Configure (Debug + Coverage + Tests)
-        run: |
-          ./build_Ut.sh
-          
-
       - name: Build (includes tests)
         run: 
           ./build_Ut.sh
@@ -39,11 +34,15 @@ jobs:
       #- name: Run tests
       #  run: ctest --test-dir build --output-on-failure
 
-      - name: Generate coverage (HTML)
-        run: |
-          mkdir -p build/report
-          gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
+      #- name: Generate coverage (HTML)
+      #  run: |
+      #    mkdir -p build/report
+      #    gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
+      #
 
+      - name: Debug: find coverage html
+         run: |
+            find . -maxdepth 4 -name "coverage*.html" -o -name "*.html"
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
