--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,8 +41,8 @@ jobs:
       #
 
       - name: Debug: find coverage html
-         run: |
-            find . -maxdepth 4 -name "coverage*.html" -o -name "*.html"
+        run: 
+          find . -maxdepth 4 -name "coverage*.html" -o -name "*.html"
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
         with:
