--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,8 +40,9 @@ jobs:
       #    gcovr -r . --filter 'src' --html --html-details -o build/report/coverage.html
       #
 
-      - name: Debug: find coverage html
-        run: 
+      - name:
+        Debug: find coverage html
+        run: |
           find . -maxdepth 4 -name "coverage*.html" -o -name "*.html"
       - name: Upload coverage report
         uses: actions/upload-artifact@v4
