add docker container to make it easy to run the server

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -122,5 +122,6 @@ find_package(Threads REQUIRED)
 add_executable(cc_app main.cpp)
 target_link_libraries(cc_app PRIVATE cc_api ${CURL_LIBRARIES})
 target_link_libraries(cc_app PRIVATE Crow::Crow)
+target_link_libraries(cc_utils PUBLIC Crow::Crow)
 target_link_libraries(cc_app PRIVATE cc_api)
 target_link_libraries(cc_app PRIVATE Threads::Threads)
